En atención al Ticket #038043

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderInfracciones.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderInfracciones.cshtml
@@ -68,12 +68,11 @@
             if (idEspecie != "0002226" && idEspecie != null) {
                 codEspecie = idEspecie;
                 especie = desEspecie;
-            }
-
-            if (idEspecieFauna != "0002226" && idEspecieFauna != null) {
+            }else if (idEspecieFauna != "0002226" && idEspecieFauna != null) {
                 codEspecie = idEspecieFauna;
                 especie = desEspecieFauna;
             }
+
             if (indice != null) {
                 RegEstado = 2;
             }
