--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderInfracciones.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderInfracciones.cshtml
@@ -38,6 +38,10 @@
             }
         });
         _renderInfracciones.fncBuscarPOA();
+
+        //Seleccionar especies por defecto Ninguna | Ninguna
+        _renderInfracciones.frm.find("#ddlEspeciesFauna").val('0002226');
+        _renderInfracciones.frm.find("#ddlEspeciesFlora").val('0002226');
     };
 
     ///--------> lista
